--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.10.15"
+    "mongoose": "^5.10.15",
+    "multer": "^1.4.2",
+    "sharp": "^0.26.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
